--- a/index.html
+++ b/index.html
@@ -22,8 +22,19 @@
 	<body>
 		<div class="container">
 			<header>
-				<div class="logo">Logo</div>
-				<nav></nav>
+			 <div class="wrapper">
+				<div class="logo">Portfolio</div>
+				<nav>
+					<ul>
+						<li class="active">Home</li>
+						<li>About</li>
+						<li>Portfolio</li>
+						<li>Blog</li>
+						<li>Archives</li>
+						<li>Contact</li>
+					</ul>
+				</nav>
+			 </div>
 			</header>
 			
 
