nav without search

--- a/index.html
+++ b/index.html
@@ -26,12 +26,12 @@
 				<div class="logo">Portfolio</div>
 				<nav>
 					<ul>
-						<li class="active">Home</li>
-						<li>About</li>
-						<li>Portfolio</li>
-						<li>Blog</li>
-						<li>Archives</li>
-						<li>Contact</li>
+						<li><a class="active" href="#">Home</a></li>
+						<li><a href="#">About</a></li>
+						<li><a href="#">Portfolio</a></li>
+						<li><a href="#">Blog</a></li>
+						<li><a href="#">Archives</a></li>
+						<li><a href="#">Contact</a></li>
 					</ul>
 				</nav>
 			 </div>
